@@ -10,7 +10,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ ubuntu-latest ]
+        os: [ ubuntu-latest, macos-latest ]
         perl: [ '5.32', '5.24', '5.18', '5.14', '5.10' ]
         include:
           - perl: '5.32'
