@@ -2,6 +2,7 @@ Revision history for Fork-Event-Interval
 
 1.02 UNREL
     - Updated shared data example to be a scalar
+    - Update t/10-shared.t as it was failing under MacOS/FreeBSD
 
 1.01    2021-04-14
     - If interval is set to zero, we'll run only once
